# Gravity-Simulator

./: .gitignore  Bound.h  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONSTANTS.h  CPackConfig.cmake  CPackSourceConfig.cmake  DEPENDENCIES  Effect.cpp  Effect.h  LICENSE.txt  Life.h  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  Spaceship.cpp  Spaceship.h  benchmark_config.ini  cmake_install.cmake  compare_benchmarks.py  main.cpp  make_installer.bat  planet.cpp  planet.h  progress.txt  resources.rc  rom.cpp  rom.h  run_benchmarks.py  runsim.cpp  settings.txt  task.txt
.claude/: screenshot.py
.claude/skills/sim-test/: SKILL.md
.github/: FUNDING.yml
SFML/: SFMLConfig.cmake  SFMLConfigDependencies.cmake  SFMLConfigVersion.cmake  SFMLSharedTargets.cmake  cmake_install.cmake
SFML/lib/Debug/: sfml-audio-d.exp  sfml-graphics-d.exp  sfml-network-d.exp  sfml-system-d.exp  sfml-window-d.exp
SFML/src/SFML/: cmake_install.cmake
SFML/src/SFML/Audio/: cmake_install.cmake  sfml-audio.rc
SFML/src/SFML/Audio/sfml-audio.dir/Debug/: _IsIncrementalBuild  sfml-audio-d-2.ilk  sfml-audio.res
SFML/src/SFML/Graphics/: cmake_install.cmake  sfml-graphics.rc
SFML/src/SFML/Graphics/sfml-graphics.dir/Debug/: _IsIncrementalBuild  sfml-graphics.res
SFML/src/SFML/Main/: cmake_install.cmake
SFML/src/SFML/Main/sfml-main.dir/Debug/: _IsIncrementalBuild
SFML/src/SFML/Network/: cmake_install.cmake  sfml-network.rc
SFML/src/SFML/Network/sfml-network.dir/Debug/: _IsIncrementalBuild  sfml-network-d-2.ilk  sfml-network.res
SFML/src/SFML/System/: cmake_install.cmake  sfml-system.rc
SFML/src/SFML/System/sfml-system.dir/Debug/: _IsIncrementalBuild  sfml-system-d-2.ilk  sfml-system.res
SFML/src/SFML/Window/: cmake_install.cmake  sfml-window.rc
SFML/src/SFML/Window/sfml-window.dir/Debug/: _IsIncrementalBuild  sfml-window-d-2.ilk  sfml-window.res
TGUI/: CMakeLists.txt  TGUIConfig.cmake  changelog.md  cmake_install.cmake
TGUI/.github/workflows/: ci.yml
TGUI/cmake/: Macros.cmake
TGUI/examples/: main-SFML_OPENGL3.cpp
TGUI/gui-builder/: cmake_install.cmake
TGUI/gui-builder/include/WidgetProperties/: GrowHorizontalLayoutProperties.hpp  GrowVerticalLayoutProperties.hpp
TGUI/gui-builder/src/: Form.cpp  GuiBuilder.cpp
TGUI/include/TGUI/: AllWidgets.hpp  Layout.hpp  String.hpp  TextStyle.hpp
TGUI/include/TGUI/Backend/Font/SFML-Graphics/: BackendFontSFML.hpp
TGUI/include/TGUI/Backend/Window/: Backend.hpp
TGUI/include/TGUI/Widgets/: ClickableWidget.hpp  GrowHorizontalLayout.hpp  GrowVerticalLayout.hpp  HorizontalLayout.hpp  VerticalLayout.hpp
TGUI/include/TGUI/extlibs/: IncludeNanoSVG.hpp
TGUI/lib/Debug/: tgui-d.exp
TGUI/src/: CMakeLists.txt  Container.cpp  FileDialogIconLoaderLinux.cpp  Widget.cpp  cmake_install.cmake
TGUI/src/Backend/Font/SFML-Graphics/: BackendFontSFML.cpp
TGUI/src/Backend/Window/: Backend.cpp
TGUI/src/Backend/Window/SDL/: BackendGuiSDL.cpp
TGUI/src/Loading/: ThemeLoader.cpp  WidgetFactory.cpp
TGUI/src/Widgets/: ButtonBase.cpp  GrowHorizontalLayout.cpp  GrowVerticalLayout.cpp
TGUI/src/tgui.dir/Debug/: _IsIncrementalBuild
TGUI/tests/: BackendEvents.cpp  CMakeLists.txt  Container.cpp  Widget.cpp
TGUI/tests/Widgets/: GrowHorizontalLayout.cpp  GrowVerticalLayout.cpp  PanelListBox.cpp
include/: Life.h  rom.h  sansation.hpp
resources/: resources.rc
resources/logo/: logo.xcf
resources/shaders/: bloom_combine.frag  blur.frag  bright_extract.frag
src/: BloomEffect.cpp  BloomEffect.h  Bound.cpp  Bound.h  CONSTANTS.h  Effect.cpp  Effect.h  HeatSim.cpp  HeatSim.h  Life.cpp  Life.h  SimObject.cpp  SimObject.h  Spaceship.cpp  Spaceship.h  StringConstants.h  benchmark.cpp  click_and_drag.h  debug_heat.cpp  functions.cpp  functions.h  main.cpp  object_info.cpp  object_info.h  object_tracker.cpp  object_tracker.h  physics_utils.h  planet.cpp  planet.h  roche_limit.h  rom.cpp  runsim.cpp  sim_config.h  space.cpp  space.h  udp_server.cpp  udp_server.h  user_functions.cpp  user_functions.h
src/particles/: legacy_particle.h  particle.h  particle_container.h
src/sim_objects/: SimObject.h  celestial_body.cpp  celestial_body.h  planet.cpp  planet.h
